--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Anular.cshtml
@@ -207,47 +207,15 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="IdCtaCble_CXP">Cta. Cble. CXP*</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_CXP, settings =>
-                           {
-                               settings.Name = "IdCtaCble_CXP";
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                               settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                               settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                               settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                               //Campo ID
-                               settings.Properties.ValueField = "IdCtaCble";
-                               settings.Properties.ValueType = typeof(string);
-                               settings.Properties.TextField = "pc_Cuenta";
-                               //Boton para seleccionar ningun registro
-                               settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                               settings.Properties.NullText = "== Seleccione ==";
-                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                           }).BindList(ViewBag.lst_cuentas).GetHtml()
-                                @Html.ValidationMessageFor(q => q.IdCtaCble_CXP, "", new { @class = "text-danger" })
+                                    @Html.Partial("_CmbCtaCbleCXP_Proveedor", Model.IdCtaCble_CXP)
+                                    @Html.ValidationMessageFor(q => q.IdCtaCble_CXP, "", new { @class = "text-danger" })
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="IdCtaCble_Gasto">Cta. Cble. Gasto</label>
-                                @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Gasto, settings =>
-                           {
-                               settings.Name = "IdCtaCble_Gasto";
-                               settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                               settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                               settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                               settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                               settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-                               //Campo ID
-                               settings.Properties.ValueField = "IdCtaCble";
-                               settings.Properties.ValueType = typeof(string);
-                               settings.Properties.TextField = "pc_Cuenta";
-                               //Boton para seleccionar ningun registro
-                               settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                               settings.Properties.NullText = "== Seleccione ==";
-                               settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                           }).BindList(ViewBag.lst_cuentas).GetHtml()
-                                @Html.ValidationMessageFor(q => q.IdCtaCble_Gasto, "", new { @class = "text-danger" })
+                                    @Html.Partial("_CmbCtaCbleGasto_Proveedor", Model.IdCtaCble_Gasto)
+                                    @Html.ValidationMessageFor(q => q.IdCtaCble_Gasto, "", new { @class = "text-danger" })
                             </div>
                         </div>
                     </div>
