--- a/ERP/Core.Erp.Web/Areas/General/Views/Persona/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Persona/Nuevo.cshtml
@@ -260,7 +260,9 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
+                console.log(data);
                 if (data.isValid == true) {
+                    $("#error_documento").hide();
                     $("#pe_Naturaleza").val(data.return_naturaleza);
                 }
                 else {
