--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Proveedor/Modificar.cshtml
@@ -444,7 +444,7 @@
                     } else {
                         $("#IdCtaCble_CXP").val(data.IdCtaCble_CXP);
                         $("#IdCtaCble_Gasto").val(data.IdCtaCble_Gasto);
-                        IdCtaCble_Anticipo.SetValue(data.IdCtaCble_CXC_Anticipo);
+                        //IdCtaCble_Anticipo.SetValue(data.IdCtaCble_CXC_Anticipo);
                     }
                 },
                 error: function (error) {
@@ -455,7 +455,7 @@
         else {
             $("#IdCtaCble_CXP").val(null);
             $("#IdCtaCble_Gasto").val(null);
-            IdCtaCble_Anticipo.SetValue(null);
+            //IdCtaCble_Anticipo.SetValue(null);
         }
     }
 
