--- a/ERP/Core.Erp.Web/Areas/General/Views/Persona/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Persona/Modificar.cshtml
@@ -246,6 +246,7 @@
 
     function Validar_cedula_ruc() {
         var datos = {
+            naturaleza: $("#pe_Naturaleza").val(),
             tipo_documento: $("#IdTipoDocumento").val(),
             cedula_ruc: $("#pe_cedulaRuc").val(),
         }
