--- a/ERP/Core.Erp.Web/Areas/General/Views/Persona/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/General/Views/Persona/Nuevo.cshtml
@@ -27,7 +27,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="pe_Naturaleza">Naturaleza*</label>
-                    @Html.DropDownListFor(q => q.pe_Naturaleza, new SelectList(ViewBag.lst_tipo_naturaleza, "CodCatalogo", "ca_descripcion"), new { @class = "form-control" })
+                    @Html.DropDownListFor(q => q.pe_Naturaleza, new SelectList(ViewBag.lst_tipo_naturaleza, "CodCatalogo", "ca_descripcion"), new { @class = "form-control", @id = "pe_Naturaleza" })
                     @Html.ValidationMessageFor(q => q.pe_Naturaleza, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -246,6 +246,7 @@
 
     function Validar_cedula_ruc() {
         var datos = {
+            naturaleza: $("#pe_Naturaleza").val(),
             tipo_documento: $("#IdTipoDocumento").val(),
             cedula_ruc: $("#pe_cedulaRuc").val(),
         }
