--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Index.cshtml
@@ -10,7 +10,7 @@
 }
 
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Index", "NotaCredito", FormMethod.Post, new { @role = "form", @class = "form" }))
+@using (Html.BeginForm("Index", "NotaDebito", FormMethod.Post, new { @role = "form", @class = "form" }))
 {
     <div class="box ">
         <div class="box-header with-border">
