--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura_det.cshtml
@@ -63,7 +63,7 @@
     {
         column.FieldName = "pr_descripcion";
         column.Caption = "Producto";
-        column.Width = Unit.Percentage(30);
+        column.Width = Unit.Percentage(40);
         column.EditFormSettings.Visible = DefaultBoolean.False;
     });
 
@@ -71,7 +71,7 @@
     {
         column.FieldName = "IdProducto";
         column.Caption = "Producto";
-        column.Width = Unit.Percentage(30);
+        column.Width = Unit.Percentage(40);
         column.Visible = false;
         column.EditFormSettings.Visible = DefaultBoolean.True;
         column.SetEditItemTemplateContent(c =>
@@ -87,7 +87,7 @@
         column.FieldName = "vt_cantidad";
         column.Caption = "cantidad";
         column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-        column.Width = Unit.Percentage(10);
+        column.Width = Unit.Percentage(7);
         column.EditorProperties().SpinEdit(q =>
         {
             q.MinValue = 0;
@@ -111,7 +111,7 @@
     {
         column.FieldName = "vt_PorDescUnitario";
         column.Caption = "% Desc. uni.";
-        column.Width = Unit.Percentage(10);
+        column.Width = Unit.Percentage(7);
         column.EditorProperties().SpinEdit(q =>
         {
             q.MinValue = 0;
@@ -140,7 +140,8 @@
         column.FieldName = "vt_PrecioFinal";
         column.Caption = "Precio final";
         column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-        column.Width = Unit.Percentage(10);
+        column.Width = Unit.Percentage(7);
+        column.Visible = false;
         column.EditFormSettings.Visible = DefaultBoolean.False;
     });
     settings.Columns.Add(column =>
@@ -148,7 +149,7 @@
         column.FieldName = "vt_Subtotal";
         column.Caption = "Subtotal";
         column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-        column.Width = Unit.Percentage(10);
+        column.Width = Unit.Percentage(7);
         column.EditFormSettings.Visible = DefaultBoolean.False;
     });
     settings.Columns.Add(column =>
@@ -156,7 +157,7 @@
         column.FieldName = "vt_iva";
         column.Caption = "I.V.A.";
         column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-        column.Width = Unit.Percentage(10);
+        column.Width = Unit.Percentage(7);
         column.EditFormSettings.Visible = DefaultBoolean.False;
     });
     settings.Columns.Add(column =>
@@ -164,7 +165,7 @@
         column.FieldName = "vt_total";
         column.Caption = "Total";
         column.PropertiesEdit.DisplayFormatString = "{0:n2}";
-        column.Width = Unit.Percentage(10);
+        column.Width = Unit.Percentage(7);
         column.EditFormSettings.Visible = DefaultBoolean.False;
     });
     settings.Columns.Add(column =>
