--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbProducto_Factura.cshtml
@@ -1,30 +1,32 @@
 ﻿@using System.Web.UI.WebControls;
 @{
-            var comboBox = Html.DevExpress().ComboBox(settings =>
-            {
-                settings.Name = "IdProducto";
-                settings.Width = Unit.Percentage(100);
-                settings.Properties.DropDownWidth = Unit.Percentage(100);
-                settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-                settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbProducto_Factura", Area = "Facturacion" };
-                settings.Properties.CallbackPageSize = 15;
-                settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
-                settings.Properties.TextField = "pr_descripcion";
-                settings.Properties.TextFormatString = "[{0}] {1}";
-                settings.Properties.ValueField = "IdProducto";
-                settings.Properties.ValueType = typeof(decimal);
+    var comboBox = Html.DevExpress().ComboBox(settings =>
+    {
+        settings.Name = "IdProducto";
+        settings.Width = Unit.Percentage(100);
+        settings.Properties.DropDownWidth = Unit.Percentage(100);
+        settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+        settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbProducto_Factura", Area = "Facturacion" };
+        settings.Properties.CallbackPageSize = 15;
+        settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
+        settings.Properties.TextField = "pr_descripcion";
+        settings.Properties.TextFormatString = "[{0}] {1}";
+        settings.Properties.ValueField = "IdProducto";
+        settings.Properties.ValueType = typeof(decimal);
 
-                settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                settings.Properties.AllowNull = true;
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+        settings.Properties.AllowNull = true;
 
-                settings.Properties.Columns.Add("IdProducto", "ID", 5);
-                settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
-                settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
-                settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
-                settings.Properties.FilterMinLength = 3;
-                //settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
-            })
-            .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demandaProducto,
-            new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demandaProducto).Bind((Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_factura_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Facturacion.fa_factura_det_Info>)) ? "" : (Model == 0 ? "" : Model));
+        settings.Properties.Columns.Add("IdProducto", "ID", 10);
+        settings.Properties.Columns.Add("pr_descripcion", "Producto", 50);
+        settings.Properties.Columns.Add("Stock", "Stock", 10);
+        settings.Properties.Columns.Add("precio_1", "P.V.P", 10);
+        settings.Properties.Columns.Add("nom_categoria", "Categoria", 20);
+
+        settings.Properties.FilterMinLength = 3;
+        //settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
+    })
+    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demandaProducto,
+    new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demandaProducto).Bind((Model.GetType() == typeof(Core.Erp.Info.Facturacion.fa_factura_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Facturacion.fa_factura_det_Info>)) ? "" : (Model == 0 ? "" : Model));
 }
 @comboBox.GetHtml()
