--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -518,3 +518,12 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+    <script type="text/javascript">
+        function OnSelectedCtaCbleChanged() {
+            GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+        }
+        function GrupoComboBox_BeginCallback(s, e) {
+            e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+            e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+        }
+    </script>
