--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_CmbCuenta_comprobante_contable.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_CmbCuenta_comprobante_contable.cshtml
@@ -15,9 +15,10 @@
         settings.Properties.ValueType = typeof(string);
         settings.Properties.Columns.Add("IdCtaCble", "ID", 10);
         settings.Properties.Columns.Add("pc_Cuenta", "Cuenta", 90);
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "OnSelectedCtaCbleChanged";
         settings.Properties.FilterMinLength = 3;
     })
      .BindList(new Core.Erp.Web.Areas.Contabilidad.Controllers.ComprobanteContableController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Contabilidad.Controllers.ComprobanteContableController().get_info_bajo_demanda)
-    .Bind(Model);
+    .Bind((Model.GetType() == typeof(Core.Erp.Info.Contabilidad.ct_cbtecble_Info) || Model.GetType() == typeof(Core.Erp.Info.Contabilidad.ct_cbtecble_det_Info) || Model.GetType() == typeof(List<Core.Erp.Info.Contabilidad.ct_cbtecble_det_Info>)) ? "" : Model);
     }
 @comboBox.GetHtml()
