--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Modificar.cshtml
@@ -204,8 +204,8 @@
             function OnSelectedCtaCbleChanged() {
         GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
-    function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["pre_IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
-        e.customArgs["pre_fecha"] = moment(Fecha_Venta.GetDate()).format('DD/MM/YYYY');
-    }
+        function GrupoComboBox_BeginCallback(s, e) {
+            e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+            e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+        }
     </script>
