--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/VentaActivo/Nuevo.cshtml
@@ -241,7 +241,7 @@
         GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
     }
     function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["pre_IdCtaCble"] = GridView_comprobante_detalle.GetEditor("IdCtaCble").GetValue();
-        e.customArgs["pre_fecha"] = moment(Fecha_Venta.GetDate()).format('DD/MM/YYYY');
+        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+        e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
     }
 </script>
