--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ComprobanteContable/_GridViewPartial_comprobante_detalle.cshtml
@@ -6,6 +6,7 @@
         settings.CallbackRouteValues = new { Controller = "ComprobanteContable", Action = "GridViewPartial_comprobante_detalle", Area = "Contabilidad", IdTipoCbte = Model == null ? 0 : Model.IdTipoCbte , IdCbteCble = Model == null ? 0 : Model.IdCbteCble };
         settings.KeyFieldName = "secuencia";
         settings.Width = Unit.Percentage(100);
+        settings.CommandColumn.ShowNewButtonInHeader = true;
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -18,7 +19,7 @@
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ComprobanteContable", Action = "EditingDelete", Area = "Contabilidad" };
 
         settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
 
@@ -49,14 +50,14 @@
         {
             column.FieldName = "pc_Cuenta";
             column.Caption = "Cuenta";
-            column.Width = Unit.Percentage(40);
+            column.Width = Unit.Percentage(35);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
         settings.Columns.Add(column =>
         {
             column.FieldName = "IdCtaCble";
             column.Caption = "Cuenta";
-            column.Width = Unit.Percentage(40);
+            column.Width = Unit.Percentage(35);
             column.Visible = false;
             column.EditFormSettings.Visible = DefaultBoolean.True;
             column.SetEditItemTemplateContent(c =>
